# Nexarag

./: .env.example  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  KNOWLEDGE_GRAPH_MANAGEMENT.md  README.md  TODO.md  architecture.md  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.macos.yml  docker-compose.yml  index.html  mkdocs.yml  paper.bib  paper.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/: README.md  TODO.md  TODO:.md  pyproject.toml  requirements.txt
docker/: .env.example
docs/: KNOWLEDGE_GRAPH_MANAGEMENT.md  architecture.md  index.md
frontend/: .gitignore  Dockerfile  README.md  jest.config.ts  nginx.conf  nx.json  package-lock.json  package.json  (+2 more)
src/backend/: .dockerignore  pyproject.toml  pytest.ini  requirements-test.txt
src/backend/notebooks/: add_paper_nodes.ipynb  citation_reference_graph.ipynb  language_to_cypher.ipynb  text_to_cypher.ipynb
src/backend/notebooks/examples/: graph_query_example.ipynb
src/backend/src/: .dockerignore  pyproject.toml  setup.py
src/backend/src/api/: Dockerfile  api.py  upload.py
src/backend/src/kg/: Dockerfile
src/backend/src/kg/db/: builder.py  commands.py  kg_manager.py
src/backend/src/kg/llm/: adapter.py  embeddings.py  paper_similarity.py  visualization.py
src/backend/src/nexarag_mcp/: Dockerfile  main.py
src/backend/src/rabbit/: commands.py  events.py  main.py
src/backend/src/scholar/: api.py
src/backend/tests/: test_api_sockets.py  test_api_upload.py  test_api_util.py  test_rabbit_events.py  test_rabbit_main.py  test_scholar_util.py
(+187 files in other folders)
